--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ nav h3 {
 .banner {
   display: flex;
   gap: 11.54vw;
+ 
   
 
 }
@@ -193,7 +194,7 @@ nav h3 {
 
 
 
-@media  screen and (max-width:576px) {
+@media  screen  and  (max-width:576px) {
     *{
         font-size: 12px;
     }
@@ -208,12 +209,14 @@ nav h3 {
         flex-direction: column;
         text-align: left;
        padding-left: 20px;
+       
         
     }
     .banner-heading {
         margin-top: 6.73vw;
         font-weight: 900;
         margin-left: 0;
+        padding: 0;
         
       }
     h1{
@@ -223,15 +226,22 @@ nav h3 {
     .workout-videos{
 
         top: 600px;
-        left: 200px;
+        left: 300px;
+        width: 130px;
+        height: 50px;
     }
     .banner-img{
         text-align: center;
     }
+    .banner-img img{
+      width: 90%;
+  }
     .video-tutorial {
 
         top: 800px;
         left: 20px;
+        width: 130px;
+        height: 50px;
     }
 
 
@@ -242,5 +252,15 @@ nav h3 {
         
     }
 
+
     
+}
+@media  screen  and  (max-width:465px)
+{
+  .workout-videos{
+
+    top: 600px;
+    left: 250px;
+
+}
 }
