--- a/style.css
+++ b/style.css
@@ -5,15 +5,13 @@
 }
 /* @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:wght@100..900&display=swap'); */
 
-* {
+*{
+  margin: 0  ;
   
-  margin: 0 5px ;
-  border: 1px solid red;
   /* overflow-x: hidden; */
-
   
-
 }
+
 body {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -23,14 +21,16 @@ body {
   color: white;
   background-color: black;
   
-  
-  
-  
+ 
+   
 }
 
  header {
   height: fit-content;
-   width: 100%; 
+  
+   margin-left: auto;
+   margin-right: auto;
+   
  
  
  
@@ -57,6 +57,7 @@ nav > ul {
 nav {
   display: flex;
   justify-content: space-between;
+  gap: 31vw;
   padding: 3.93vw 13.12vw 0vw 13.12vw;
 }
 nav h3 {
@@ -65,14 +66,11 @@ nav h3 {
 } */
 .home {
   display: flex;
-
   justify-content: center;
   align-items: center;
   padding: 7.44px 18.6px 7.44px 18.6px;
   font-weight: 600;
-
   border-radius: 46px;
-
   background: rgb(230, 83, 60);
   margin: 0px 47px;
 }
@@ -87,9 +85,12 @@ nav h3 {
 .banner-heading {
   margin-top: 6.73vw;
   font-weight: 900;
-  margin-left: 13.13vw;
-  width: 80%;
+  margin-left: 9.13vw;
+  width: 120%;
  
+}
+.ham{
+  display: none;
 }
 .banner-heading h1 {
   font-size: 4.53rem;
@@ -497,15 +498,19 @@ footer{
 
 
 @media screen and (max-width: 576px) {
-  * {
+  /* * {
     font-size: 12px;
-  }
+  } */
   header {
+    /* width: 100%; */
     width: 100%;
+    overflow: hidden;
+    
   }
 
   nav ul {
     display: none;
+    gap: 0;
   }
   .ham > div {
     width: 30px;
@@ -524,10 +529,19 @@ footer{
     margin-left: 0;
     padding: 0;
     width: 100%;
+    
   }
+  .banner-heading h1 ,.shape{
+    font-size: 3.23rem;
+    
+    
+  }
+
   h1 {
     margin: 0;
     padding: 0;
+    
+    
   }
   .orange-button {
     font-size: 15px;
@@ -591,7 +605,7 @@ height: 70px;
   width: 250px;
   height: 420px;
   flex-direction: column;
-  gap: 28px;
+  gap: 20px;
   padding: 29.96px;
   
   
@@ -602,7 +616,14 @@ height: 70px;
   width:100%;
   border-radius: 18px;
   
-
+}
+.run-text h1{
+  font-size: 2rem;
+}
+.run-text p{
+  margin-top: 10px;
+  margin-bottom: 20px;
+  
 }
 .run-text>.orange-button{
   width: 90%;
@@ -620,18 +641,21 @@ height: 70px;
 }
 .bmi-part{
   flex-direction: column;
-  align-items: center;
+  
   justify-content: center;
   gap: 20px;
   /* width: 100px; */
   width: 100%;
+  padding-left: 40px;
   
 }
+
 .bmi-info{
   margin-left: 0;
 }
 .calculator{
   margin-right: 0;
+  
 
 }
 .form-group input, select{
@@ -646,10 +670,10 @@ height: 70px;
   
 }
 .full{
-  width: 95%;
+  width: 62%;
 }
 .gender{
-  width: 45%;
+  width: 29%;
 }
 
 .trainer-card{
@@ -664,6 +688,20 @@ height: 70px;
 }
 .non{
   display: none;
+}
+.foot{
+  flex-direction: column;
+  gap: 40px;
+ width: 90%;;
+
+}
+
+footer{
+  height: fit-content;
+  /*  */
+  width: 100%-1px;
+  padding-left: 20px;
+  padding-bottom: 3px;
 }
 
 
