--- a/style.css
+++ b/style.css
@@ -255,10 +255,10 @@ section {
 }
 /* bmi calcualtor */
 
-.bmi-calcultor-section {
+/* .bmi-calcultor-section {
   /* width: 100%; */
   /* overflow: hidden; */
-}
+
 .bmi-heading {
   text-align: center;
   margin-bottom: 72px;
